Fix wrong padding

--- a/less/table-responsive.less
+++ b/less/table-responsive.less
@@ -91,7 +91,7 @@
 
     // Toggle button
     dl > div.collapse-toggle {
-        padding-left: @baseLineHeight / 2;
+        padding-right: @baseLineHeight / 2;
         padding-top: @baseLineHeight / 2;
         display: none;
         float: right;
